<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Outgoer</string>
    <string name="facebook_app_id">1323503751476839</string>
    <string name="facebook_client_token">7ab3d70595ac7c1e89552705f36da013</string>
    <string name="fb_login_protocol_scheme">fb1323503751476839</string>
    <string name="agora_app_id" translatable="false">417161094c454e85bb655a5b2e7f474c</string>
    <string name="google_map_api_key">AIzaSyAaZC5gor_kIBK6h9H1jisiOTYZ2SrsGp8</string>
    <string name="label_next">Next</string>
    <string name="label_see_all">See All</string>
    <string name="label_send">Send</string>
    <string name="label_search">Search</string>
    <string name="label_search_">Search...</string>
    <string name="label_email">Email</string>
    <string name="label_name">Name</string>
    <string name="label_log_in">Log In</string>
    <string name="label_sign_up">Sign up</string>
    <string name="label_my_profile">My Profile</string>
    <string name="label_new_post">New Post</string>
    <string name="label_gallery">Gallery</string>
    <string name="label_tag_people">Tag People</string>
    <string name="label_tag_venue">Tag Venue</string>
    <string name="label_tag_friend">Tag Friend</string>
    <string name="label_add_location">Add Location</string>
    <string name="label_add_venue">Add venue</string>
    <string name="label_edit_profile">Edit Profile</string>
    <string name="label_home">Home</string>
    <string name="label_about">About</string>
    <string name="label_write_caption">Write a caption…</string>
    <string name="label_followers">Followers</string>
    <string name="label_following">Following</string>
    <string name="label_mutual">Mutual</string>
    <string name="label_map">Map</string>
    <string name="label_logout">Logout</string>
    <string name="label_message">Message</string>
    <string name="label_online">Online</string>
    <string name="label_reels">Reels</string>
    <string name="label_follow">Follow</string>
    <string name="label_done">Done</string>
    <string name="label_save">Save</string>
    <string name="label_continue">Continue</string>
    <string name="label_your_reels">Your Reels</string>
    <string name="label_new">New</string>
    <string name="label_new_password">New Password</string>
    <string name="label_password">Password</string>
    <string name="label_resend_otp">Resend OTP</string>
    <string name="label_send_again">Send Again</string>
    <string name="label_verify_and_proceed">Verify &amp; Proceed</string>
    <string name="label_otp_verification">OTP Verification</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_forgot_password_with_question">Forgot password?</string>
    <string name="label_reset_password">Reset Password</string>
    <string name="label_forgot_password">Forgot Password</string>
    <string name="label_do_not_have_account">Don\'t have an account?</string>
    <string name="label_already_have_an_account">Already have an account?</string>
    <string name="label_enter_the_otp_sent_to">Enter the otp sent to\t</string>
    <string name="label_did_not_received_the_otp">Don\'t received the otp?</string>
    <string name="label_enter_four_digit_code">Enter 4 Digits Code</string>
    <string name="msg_reset_password_type_password">Set the new password for your account so you can login and access all the features.</string>
    <string name="msg_forgot_password_type_email">Enter your email for the verification process,\nWe will send 4 digits code on your email.</string>
    <string name="msg_forgot_password_otp_verify">Enter the 4 digits code that you received on your email.</string>
    <string name="hint_type_a_message">Type a message</string>
    <string name="hint_type_your_email">Type Your Email</string>
    <string name="hint_select_media_to_post">Select Image or Video to Post.</string>
    <string name="hint_default_email">outgore.admin@gmail.com</string>
    <string name="lorem_ipsum_is_simply_dummy_text">Lorem Ipsum is simply dummy text...</string>
    <string name="baby_base">Baby Base</string>
    <string name="other_near_places">Other Near Places</string>
    <string name="_5_min_ago">5 min ago</string>
    <string name="notification">Notification</string>
    <string name="likes">Likes</string>
    <string name="search">Search</string>
    <string name="min">8 min</string>
    <string name="reply">Reply</string>
    <string name="type_a_comment">Type a comment...</string>
    <string name="today">Today</string>
    <string name="dance_party">Dance Party</string>
    <string name="see_all">See All</string>
    <string name="label_contact_support">Contact Support</string>
    <string name="label_not_now">Not Now</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_join">Join</string>
    <string name="label_unjoin">Joined</string>
    <string name="empty_name">Please enter name</string>
    <string name="empty_email">Please enter email address</string>
    <string name="invalid_email">Please enter valid email address</string>
    <string name="empty_password">Please enter password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="password_minimum_length">Password length must be at least 8 chars</string>
    <string name="msg_password_should_match">Password should match</string>
    <string name="msg_enter_otp">Enter Confirmation Code</string>
    <string name="msg_invalid_otp">Invalid Confirmation Code</string>
    <string name="msg_agree_terms">Please agree to terms &amp; condition, privacy policy and user agreement</string>
    <string name="msg_some_permission_denied">Some permissions were denied</string>
    <string name="msg_permission_denied">Permission denied</string>
    <string name="error_in_finding_file_path">Error in finding file path</string>
    <string name="msg_permission_permanently_denied">Permissions is permanently denied, please manually grant permissions</string>
    <string name="label_all_photos">All Photos</string>
    <string name="label_all_videos">All Videos</string>
    <string name="label_albums">Albums</string>
    <string name="label_select_video">Select Video</string>
    <string name="msg_there_are_no_photos">No photos found</string>
    <string name="msg_there_are_no_videos">No videos found</string>
    <string name="msg_there_are_no_media">No media found</string>
    <string name="msg_error_in_retrieving_selected_video_path">Error in retrieving selected video path</string>
    <string name="suggested_for_you">Suggested For You</string>
    <string name="post_like"> %1$d Likes</string>
    <string name="comment_hint"> Reply to %1$s</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="forward">Forward</string>
    <string name="copy">Copy</string>
    <string name="select_your_location">Select Your Location</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="address_not_found">Address not found</string>
    <string name="label_delete">Delete</string>
    <string name="label_capture_photo">Capture Photo</string>
    <string name="label_record_video">Record Video</string>
    <string name="label_post">Post</string>
    <string name="label_more">… more</string>
    <string name="yesterday">Yesterday</string>
    <string name="label_is_with">is with</string>
    <string name="label_other">Other</string>
    <string name="label_and">and</string>
    <string name="label_add_to_your_story">Add to your story</string>
    <string name="temp_text_tag_post"><b>Ruffels</b> is with @Baby Base, @Naughty Miss and <font color='#BF5AF2'>10 others</font></string>
    <string name="label_offline">Offline</string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>
    <string name="msg_location_permission_required_for_venue">Location permission is required to show near by venues.</string>
    <string name="label_all">All Categories</string>
    <string name="label_all_i">All</string>
    <string name="label_miles">kms</string>
    <string name="label_kms">kms</string>
    <string name="msg_you_have_no_any_like_users">You have no any like users.</string>
    <string name="msg_no_data_comment_post">No Comments yet!</string>
    <string name="msg_no_data_comment_sponty">No any comments on\nthis sponty</string>
    <string name="msg_no_data_comment_reel">This reel has no comment yet !</string>
    <string name="msg_no_data_tag_people">You don\'t have\nany follower yet</string>
    <string name="msg_no_data_follower">No followers found</string>
    <string name="msg_no_data_mutual">No mutual friends found</string>
    <string name="msg_no_data_following">Not following anyone yet</string>
    <string name="msg_no_data_notification">You have no any notifications!</string>
    <string name="no_reels_found">No reels found</string>
    <string name="no_posts_found">No posts found</string>
    <string name="no_favourite_venues_yet">No Favourite Venues Yet!</string>
    <string name="msg_gps_settings">GPS is settings</string>
    <string name="msg_gps_settings_confirmation">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="label_settings">Settings</string>
    <string name="label_blocked_accounts">Blocked accounts</string>
    <string name="label_video">Video</string>
    <string name="label_latest_events">Latest Events</string>
    <string name="label_edit">Edit</string>
    <string name="crop_image_activity_title"></string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="are_you_looking_for_good_night_experience">Are you looking for good night experience?</string>
    <string name="label_continue_with_email">Continue with email</string>
    <string name="label_continue_as_venue_login">Register as Venue</string>
    <string name="label_continue_with_google">Continue with Google</string>
    <string name="label_continue_with_apple">Continue with Apple</string>
    <string name="label_sign_up_to_outgoer">Sign up to Outgoer</string>
    <string name="desc_account_create">By creating an account, I confirm i have read and agree to the %1$s and %2$s.</string>
    <string name="label_sponty">Sponty</string>
    <string name="label_reel">Reel</string>
    <string name="label_feeds">Feed</string>
    <string name="label_why_are_you_reporting_this_user">Why are you reporting this user?</string>
    <string name="desc_report">Your report is anonymous, except if you\'re reporting an intellectual property infringement. If someone is in immediate danger, call the local emergency services - don\'t wait.</string>
    <string name="label_report">Report</string>
    <string name="label_back">Back</string>
    <string name="label_send_verification_request">Send Verification Request</string>
    <string name="label_outgoer_verification">Outgoer Verification</string>
    <string name="label_request_for_verification_badge">Request for verification badge</string>
    <string name="desc_verified_user">Let your follower know that it\'s the real you with a verified badge on your profile.</string>
    <string name="label_verified">Verified</string>
    <string name="label_your_request_is_pending">Your request is pending</string>
    <string name="label_congratulations_you_are_verified">Congratulations!! You are verified.</string>
    <string name="save_your_login_info">Save your login info?</string>
    <string name="save_your_login_info_message">We will save the login info for you, so you won\'t need to enter it on your iCould® devices next time that you log in.</string>
</resources>