<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.userverification.VerificationActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_8sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_new_back_arrow_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/inter_semi_bold"
            android:gravity="center_horizontal"
            android:text="@string/label_outgoer_verification"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/label_request_for_verification_badge"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_20sdp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular"
        android:text="@string/desc_verified_user"
        android:textColor="@color/grey_light"
        android:textSize="@dimen/_10ssp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_5sdp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvVerified"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/label_congratulations_you_are_verified"
        android:textColor="@color/color_34C759"
        android:textSize="@dimen/_13ssp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:visibility="gone"/>

    <FrameLayout
        android:id="@+id/flButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSendRequest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:backgroundTint="@color/purple"
            android:fontFamily="@font/inter_medium"
            android:padding="@dimen/_8sdp"
            android:text="@string/label_send_verification_request"
            android:textAllCaps="false"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_50sdp"
            android:visibility="gone"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPendingRequest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:backgroundTint="@color/color_FF9500_transparent_15"
            android:fontFamily="@font/inter_medium"
            android:padding="@dimen/_8sdp"
            android:text="@string/label_your_request_is_pending"
            android:textAllCaps="false"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_50sdp"
            android:textColor="@color/color_FF9500"
            android:visibility="gone"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonVerified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:backgroundTint="@color/color_34C759_transparent_15"
            android:fontFamily="@font/inter_medium"
            android:paddingVertical="@dimen/_6sdp"
            android:text="@string/label_verified"
            android:textAllCaps="false"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_7sdp"
            android:paddingHorizontal="@dimen/_16sdp"
            android:textColor="@color/color_34C759"
            android:visibility="gone"/>

    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:visibility="gone"/>



</LinearLayout>