<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/colorFullTransparent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="@dimen/zero_dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_close"
            android:tint="@color/white"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/inter_semi_bold"
            android:text="@string/label_sign_up_to_outgoer"
            android:textColor="@color/white"
            android:textSize="@dimen/_22ssp"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPrivacyPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/inter_regular"
            android:gravity="center_horizontal"
            android:text="@string/desc_account_create"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="@dimen/_10ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/are_you_looking_for_good_night_experience"
            android:textColor="@color/grey_light"
            android:textSize="@dimen/_12ssp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/buttonContWithEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/gredient_color"
            android:padding="@dimen/_8sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:tint="@color/white"
                android:src="@drawable/ic_person" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:text="@string/label_continue_with_email"
                android:textAllCaps="false"
                android:layout_marginStart="@dimen/_4sdp"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                app:cornerRadius="@dimen/_7sdp" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonContWithGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_2sdp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/inter_medium"
            android:padding="@dimen/_8sdp"
            android:text="@string/label_continue_with_google"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:cornerRadius="@dimen/_7sdp"
            app:icon="@drawable/ic_login_bs_google_logo"
            app:iconGravity="textStart"
            app:iconTint="@null" />

        <LinearLayout
            android:id="@+id/continueAsVenueLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/blue_gredient_color"
            android:padding="@dimen/_8sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:tint="@color/white"
                android:src="@drawable/ic_location_normal" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:text="@string/label_continue_as_venue_login"
                android:textAllCaps="false"
                android:layout_marginStart="@dimen/_4sdp"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/white"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                app:cornerRadius="@dimen/_7sdp" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonContWithApple"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/inter_medium"
            android:padding="@dimen/_8sdp"
            android:text="@string/label_continue_with_apple"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            android:visibility="gone"
            app:cornerRadius="@dimen/_7sdp"
            app:icon="@drawable/ic_login_bs_apple_logo"
            app:iconGravity="textStart"
            app:iconTint="@color/black" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:paddingVertical="@dimen/_4sdp"
            android:text="@string/label_back"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:textSize="@dimen/_12ssp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_20sdp"/>


    </LinearLayout>

</LinearLayout>