<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/black_bottom_sheet_background"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:paddingHorizontal="@dimen/_15sdp"
    android:minHeight="@dimen/_300sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/label_report"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/label_why_are_you_reporting_this_user"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/desc_report"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvReportReason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        tools:listitem="@layout/view_report_reason"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"/>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="@dimen/_20sdp"
        android:visibility="gone"/>

</LinearLayout>